samples/_failures_safe/1761505790_2d3ef6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01027fda.c: In function ‘tokenize’:
./samples/SAFE/__tmp_01027fda.c:160:15: error: expected ‘;’ at end of input
  160 |         tokens
      |               ^
      |               ;
./samples/SAFE/__tmp_01027fda.c:160:9: error: expected declaration or statement at end of input
  160 |         tokens
      |         ^~~~~~
./samples/SAFE/__tmp_01027fda.c:160:9: error: expected declaration or statement at end of input
